fix img distort

--- a/src/components/Auth/Signup/OtherStages.css
+++ b/src/components/Auth/Signup/OtherStages.css
@@ -111,6 +111,7 @@ form button:hover {
 .frthStage form div img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .frthStage form div .uploadIcon {
@@ -166,6 +167,7 @@ form button:hover {
     border-radius: 50%;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .fifth form .profImgUp {
